force-app/main/default/objects/Deal_Implementation__c/Deal_Implementation__c.object-meta.xml
<CustomObject>
<label
  >Deal Implementation</label><pluralLabel>Deal Implementations</pluralLabel>
    <nameField><displayFormat>DIM-{00000000}</displayFormat><label
    >Deal Implementation Number</label><type>AutoNumber</type></nameField>
    <sharingModel>Private</sharingModel><externalSharingModel
  >Private</externalSharingModel><enableReports
  >true</enableReports><enableActivities>false</enableActivities><enableHistory
  >true</enableHistory>
</CustomObject>