force-app/main/default/objects/Deal_Implementation__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <label>Customer Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Implementations (Customer)</relationshipLabel>
    <relationshipName>Deal_Implementations_Customer</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>