force-app/main/default/objects/Deal_Implementation__c/fields/External_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Project_Id__c</fullName>
    <label>External Project Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>