force-app/main/default/objects/Deal_Implementation__c/fields/External_Project_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Project_URL__c</fullName>
    <label>External Project URL</label>
    <type>Url</type>
</CustomField>