force-app/main/default/objects/Deal_Implementation__c/fields/External_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Sync_Status__c</fullName>
    <label>External Sync Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>