force-app/main/default/objects/Deal_Implementation__c/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <description
  >Same value shape as Deal_Registration__c.Lifecycle_Health__c for UI
  consistency. Computed by ImplementationHealthService.</description>
    <label>Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Healthy</fullName><default>true</default><label
        >Healthy</label></value>
            <value><fullName>At Risk</fullName><default>false</default><label
        >At Risk</label></value>
            <value><fullName>Blocked</fullName><default>false</default><label
        >Blocked</label></value>
            <value><fullName>Overdue</fullName><default>false</default><label
        >Overdue</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>