force-app/main/default/objects/Deal_Implementation__c/fields/Last_External_Sync_On__c.field-meta.xml
<CustomField>
    <fullName>Last_External_Sync_On__c</fullName>
    <label>Last External Sync On</label>
    <type>DateTime</type>
</CustomField>