force-app/main/default/objects/Deal_Implementation__c/fields/Parent_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Implementation__c</fullName>
    <label>Parent Implementation</label>
    <type>Lookup</type>
    <referenceTo>Deal_Implementation__c</referenceTo>
    <relationshipLabel>Child Implementations</relationshipLabel>
    <relationshipName>Child_Implementations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>