force-app/main/default/objects/Deal_Implementation__c/fields/Planned_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Completion_Date__c</fullName>
    <label>Planned Completion Date</label>
    <type>Date</type>
</CustomField>