force-app/main/default/objects/Deal_Implementation__c/fields/Primary_Participant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Participant__c</fullName>
    <label>Primary Participant</label>
    <type>Lookup</type>
    <referenceTo>Deal_Participant__c</referenceTo>
    <relationshipLabel>Deal Implementations</relationshipLabel>
    <relationshipName>Deal_Implementations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>