force-app/main/default/objects/Deal_Implementation__c/fields/Primary_Partner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner__c</fullName>
    <label>Primary Partner</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel
  >Deal Implementations (Primary Partner)</relationshipLabel>
    <relationshipName>Deal_Implementations_Primary_Partner</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>