force-app/main/default/objects/Deal_Implementation__c/fields/Protection__c.field-meta.xml
<CustomField>
    <fullName>Protection__c</fullName>
    <label>Protection</label>
    <type>Lookup</type>
    <referenceTo>Deal_Protection_Grant__c</referenceTo>
    <relationshipLabel>Deal Implementations</relationshipLabel>
    <relationshipName>Deal_Implementations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>