force-app/main/default/objects/Deal_Implementation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description
  >Trimmed to the 9 values actually produced across ImplementationCommandService/ImplementationHandoffCommandService/ImplementationAcceptanceCommandService. "At Risk"/"Blocked" live on Health__c instead - Status__c never sets them, avoiding a duplicate meaning across the two fields.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Pending Customer Acceptance</fullName>
            </value>
            <value>
                <fullName>Customer Accepted</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>